Functional version ! I shall still include the MusicXML parser stuff

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build-cpp": "npx emsdk install ^1.40.1 && npx emsdk activate ^1.40.1 && npx emcc -s SINGLE_FILE=1 -s EXPORT_ES6=1 -s MODULARIZE=1 -s EXPORT_NAME=\"'SynthetiserModule'\" -s ALLOW_MEMORY_GROWTH=1 -s EXPORTED_FUNCTIONS=['_LoadNote','_GetReplayedInstruments','_AddReplayInstrument','_ClearAll','_SetReplayedInstrumentVolume','_SetReplayedInstrumentInstrument','_TriggerNote','_ReleaseNote','_ReleaseAllNotes','_GetNotesTriggered','_SampleData']  -s EXTRA_EXPORTED_RUNTIME_METHODS=[\"cwrap\"] -O3 --bind -o worker/SynthetiserModule.js cpp/main.cpp",
     "build": "webpack --progress --config webpack.prod.js",
     "build-dev": "webpack --progress --config webpack.dev.js",
-    "build-worker-dev": "webpack --progress --config webpack.wdev.js"
+    "build-worker-dev": "webpack --progress --config webpack.wdev.js",
+    "build-worker": "webpack --progress --config webpack.wprod.js"
   },
   "devDependencies": {
     "emscripten-sdk": "^1.40.1-3",
